--- a/coffee-store-client/index.html
+++ b/coffee-store-client/index.html
@@ -2,9 +2,13 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link
+      rel="shortcut icon"
+      href="./src/assets/more/logo1.png"
+      type="image/x-icon"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Espresso Emporium</title>
   </head>
   <body>
     <div id="root"></div>
